--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -161,14 +161,7 @@
         font-weight: 700
         
       #eventmsg-board
-        display: flex
-        flex-direction: column
-        flex-wrap: nowrap
-        align-content: center
-        justify-content: flex-start
-        align-items: flex-start
         width: 100%
-        
         overflow: scroll
         overflow-x: hidden
         
@@ -437,6 +430,7 @@
       position: absolute
       right: 1.5rem
       top: 1.5rem
+      z-index: 1
   
   #eventjoinwindow
     #exitbtn3
