--- a/static/sass/variable.sass
+++ b/static/sass/variable.sass
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap');
 
+::-webkit-scrollbar
+  width: 4px
+::-webkit-scrollbar-track
+  background: transparent //#f1f1f1
+  border-radius: 5px
+::-webkit-scrollbar-thumb
+  background: #CCC
+  border-radius: 2px
+::-webkit-scrollbar-thumb:hover
+  background: #888
+
 \:root
   
   //基本顏色 （數字大 淺
