--- a/templates/about_us.pug
+++ b/templates/about_us.pug
@@ -119,22 +119,28 @@ html
           .top
             p.version 0.0.10
             p.date 21/6/8
-          p.description 又是一個美好的一天，修正了一些bug，看了一些yt
+          p.description - 又是一個美好的一天，修正了一些bug，看了一些yt
           
           .top
             p.version 0.0.11
             p.date 21/6/10
-          p.description 新增了mail通知，不小心吃了兩包鹹酥雞
+          p.description - 新增了mail通知，不小心吃了兩包鹹酥雞
           
           .top
             p.version 0.0.12
             p.date 21/6/15
-          p.description 新增了幾個頁面到活動介紹，活動創建者可以編輯、刪除活動
+          p.description - 活動創建者現在可以編輯、刪除活動
           
           .top
             p.version 0.0.12
             p.date 21/6/17
-          p.description 超人拯救世界，大學生拯救期末考，各位加油
+          p.description - 超人拯救世界，大學生拯救期末考，各位加油
+          
+          .top
+            p.version 0.0.13
+            p.date 21/6/19
+          p.description - 修正個人頁面崩潰的問題
+          p.description - 微調註冊頁面
           
           
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
