--- a/templates/login.pug
+++ b/templates/login.pug
@@ -14,6 +14,7 @@ html
     script(src="https://code.jquery.com/jquery-3.2.1.min.js")
     //-script(src="{% static 'js/jquery-ui.js' %}")
     script(src="http://code.jquery.com/ui/1.12.1/jquery-ui.js")
+    script(src="https://cdn.jsdelivr.net/npm/sweetalert2@11")
   {% include 'navbar.pug' %}
 
   body
