--- a/templates/login.pug
+++ b/templates/login.pug
@@ -15,6 +15,7 @@ html
     //-script(src="{% static 'js/jquery-ui.js' %}")
     script(src="http://code.jquery.com/ui/1.12.1/jquery-ui.js")
     script(src="https://cdn.jsdelivr.net/npm/sweetalert2@11")
+    script(src="{% static 'js/login.js' %}")
   {% include 'navbar.pug' %}
 
   body
@@ -33,7 +34,7 @@ html
           p#forgot 忘記密碼？
 
           .buttons 
-            input#login-btn(value="登入", type="submit")
+            input#login-btn(value="登入", type="button")
             p or
             p#sign-up 註冊
       
@@ -53,7 +54,7 @@ html
             input#send-check(type="button", value="送出驗證碼")
             script.
               $(document).ready(function(){
-                $("input#send-check").on("click", function() {
+                $(document).on("click", "input#send-check", function() {
                   console.log("verification code sent")
                   send_verification_handler(
                     "{% url 'verify' %}",
@@ -67,19 +68,30 @@ html
           input#sign-pwd.input-area(type="password", name="sign-pwd", placeholder="密碼")
           label(for='double-pwd')
           input#double-pwd.input-area(type="password", name="double-pwd", placeholder="請再輸入一次密碼")
-          {% if error_message %}
-          p.err-msg {{ error_message }}
-          {% endif %}
-          p.err-msg(style="display: none")
 
           #term-div
             input#terms(type="checkbox", name="terms")
             label(for='terms') I Accept Terms and Condition, Privacy Policy
 
           .buttons
-            input#sign-up-btn(value="註冊", type="submit")
+            input#sign-up-btn(value="註冊", type="button")
             p or
             p#login 登入
+          script.
+            $(document).ready(function(){
+              $(document).on("click", "input#sign-up-btn", function() {
+                sign_up_handler(
+                  "{% url 'sign_up' %}",
+                  "{{ csrf_token }}",
+                )
+              });
+              $(document).on("click", "input#login-btn", function() {
+                login_handler(
+                  "{% url 'login_request' %}",
+                  "{{ csrf_token }}",
+                )
+              });
+            })
     #background-element
       //-
         #bubbles
@@ -108,5 +120,4 @@ html
     
     //-script(src="{% static 'js/semantic.min.js' %}")
     script(src="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.js")
-    script(src="{% static 'js/login.js' %}")
     script(src="{% static 'js/navbar.js' %}")
