fix lots of bugs.((friend info hover js, set some css max min size, eventwindow modify window change placeholder to value

--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -12,6 +12,7 @@
   left: 50%
   width: 41%
   min-width: 35rem
+  max-width: 43rem
   padding: 2rem 2rem 1.5rem 2rem
   background: linear-gradient(180deg,var(--border-color-eventwindow), #FFFFFF)
   border-radius: 3rem
@@ -124,7 +125,7 @@
             width: 100%
       
       #event-detail
-        font-size: 1rem
+        font-size: 0.95rem
         line-height: 1.5rem
         min-height: 5rem
         max-height: 14rem
@@ -209,19 +210,18 @@
               
               
               #eventmsg-sendername
-                font-size: 1.05rem
-                width: 4rem
+                font-size: 0.85rem
                 font-weight: 700
                 color: var(--black-2)
               #event-date
                 font-size: 0.7rem
-                width: 15rem
                 color: var(--fontcolor-second)
                 text-align: right
                 
             #eventmsgtext
-              font-size: 0.9rem
+              font-size: 0.8rem
               color: #595959
+              font-weight: 400
         
     #eventmsg-sender
       display: flex
