--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -510,9 +510,10 @@ footer
       background-color: white
       border-radius: 1rem
       color: var(--fontcolor-placeholder)
-      
       overflow-x: scroll
       overflow-y: visible
+      max-height: 8rem
+      
       #requiretitle
         border-radius: 1rem
         text-align: center
