--- a/templates/about_us.pug
+++ b/templates/about_us.pug
@@ -142,6 +142,11 @@ html
           p.description - 修正個人頁面崩潰的問題
           p.description - 微調註冊頁面
           
+          .top
+            p.version 0.0.14
+            p.date 21/6/23
+          p.description - 修正一些魔法師都無法解決的問題
+          
           
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
