--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -509,7 +509,7 @@ footer
       align-items: flex-start
       
       a
-        margin: 0 0.2rem 0.5rem 0.2rem
+        margin: 0 0.1rem 0.5rem 0.1rem
       img
         width: 3.1rem
         height: 3.1rem
@@ -527,6 +527,7 @@ footer
         align-items: stretch;
         align-content: space-between;
         position: absolute
+        trasnform: translate(-50%, -100%)
         padding: 0.5rem
         background-color: var(--background-color-freind)
         border: solid var(--background-color-navbar) 0.1rem
