modify event control UI

--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -77,7 +77,7 @@ a
       outline: none
       border: none
       transform: translate(-120%, 0)
-      color: #333333
+      color: var(--black-3)
     
 
   ul
