--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -1,3 +1,8 @@
+input[type='button']:hover
+  transform: scale(1.02)
+input[type='button']:active
+  transform: scale(0.98)
+
 #eventwindow
   display: none
   position: fixed
@@ -84,11 +89,16 @@
           margin-left: 0.7rem
           #event-title
             font-size: 1.5rem
-            //width: 50rem
+            border-radius: 0.7rem;
+            //border: solid 2px var(--black-3);
+            //padding-left: 0.5rem
           #event-subtitle
             font-size: 1rem
             color: var(--fontcolor-third)
             margin: 0 0 0 0.2rem
+            border-radius: 0.5rem;
+            //border: solid 2px var(--black-3);
+            //padding-left: 0.5rem
           #event-require
             display: flex
             flex-direction: row;
@@ -210,7 +220,7 @@
               
               
               #eventmsg-sendername
-                font-size: 0.85rem
+                font-size: 0.9rem
                 font-weight: 700
                 color: var(--black-2)
               #event-date
@@ -219,7 +229,7 @@
                 text-align: right
                 
             #eventmsgtext
-              font-size: 0.8rem
+              font-size: 0.85rem
               color: #595959
               font-weight: 400
         
@@ -266,6 +276,7 @@
           padding: 0.4rem 1.3rem 0.4rem 1rem
           font-size: 1.1rem
           cursor: text
+          margin-right: 1.7rem
         
         input
           //position: absolute
@@ -280,9 +291,9 @@
           cursor: pointer
           
         .eventmsg-btn
-          //position: absolute
-          //right: 0
-          transform: translateX(-1.4rem)
+          position: absolute
+          left: 60%
+          //transform: translateX(-1.4rem)
           outline: none
           border: none
           border-radius: 3rem
@@ -539,9 +550,9 @@
         max-height: 55%;
         overflow: auto;
         width: 85%
-        background-color: #CCCCCC
+        background-color: var(--black-5)
         border-radius: 1rem
-        
+        padding: 0.5rem 0
       
         .member-profile
           display: flex
@@ -554,30 +565,32 @@
           background-color: #EEEEEE
           margin: 0.3rem 0
           border-radius: 1rem
+          padding: 0.3rem 0;
           
           a
             #member-profile-left
               display: flex
-              flex-direction: row;
-              flex-wrap: nowrap;
-              align-items: center;
-              width: 30%
+              flex-direction: row
+              flex-wrap: nowrap
+              align-items: flex-start
+              width: 11rem
+              margin-right: 0.3rem;
               
               img
                 width: 3.5rem
                 height: 3.5rem
                 border-radius: 50%
                 border: solid 2px #DDDDDD
-                margin-right: 1rem
+                margin-right: 0.5rem
               
               #member-detail
-                display: flex
-                flex-direction: column;
-                align-items: flex-start;
-                justify-content: center;
-                p
-                  font-size: 0.7rem
+                #m-name
+                  font-size: 0.9rem
                   font-weight: 700
+                #m-grade
+                  font-size: 0.8rem
+                  font-weight: 500
+                  color: var(--black-2)
                 
           #member-profile-right
             display: flex
@@ -585,21 +598,35 @@
             flex-wrap: nowrap;
             align-items: flex-start;
             justify-content: flex-start;
-            width: 70%
+            width: calc(100% - 11.5rem)
             p
               font-size: 0.8rem
-          
+              text-aligh: right
+              width: 95%
+            #m-status
+              text-align: right
+              background-color: var(--blue)
+      #control-btns
+        display: flex
+        flex-wrap: nowrap;
+        flex-direction: row;
+        align-items: center;
       
-      input
-        border-radius: 3rem
-        background-color: var(--border-color-eventwindow)
-        cursor: pointer
-        font-size: 1rem
-        width: 5rem;
-        height: 2.5rem;
-        outline: none
-        border: none
-  
+        
+        input
+          border-radius: 3rem
+          background-color: var(--border-color-eventwindow)
+          cursor: pointer
+          font-size: 1rem
+          outline: none
+          border: none
+          margin: 0 1rem
+          padding: 0.5rem 1rem
+        
+        #delete-btn
+          background-color: var(--red)
+        #end-btn
+          background-color: var(--black-4);
 
 #filter1
   display: none
