--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -606,12 +606,28 @@ input[type='button']:active
             #m-status
               text-align: right
               background-color: var(--blue)
+            .member-btn
+              margin: 0.3rem 0 0.3rem 0
+              height: 1.5rem
+              font-size: 0.8rem
+              padding: 0.05rem 0.6rem
+              outline: none
+              border: none
+              border-radius: 2rem
+            .accept-btn
+              background-color: var(--background-color-tag2)
+              margin-right: 0.3rem
+            .accept-btn:hover
+              background-color: var(--background-color-button-hover2)
+            .reject-btn
+              background-color: var(--background-color-button)
+            .reject-btn:hover
+              background-color: var(--background-color-button-hover)
       #control-btns
         display: flex
         flex-wrap: nowrap;
         flex-direction: row;
         align-items: center;
-      
         
         input
           border-radius: 3rem
