modify event join alert, add friend hover to tag comment (need linking friend data from tagcmt)

--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -264,7 +264,7 @@ footer
             color: var(--fontcolor-reverse)
             font-size: 1.1rem
             font-weight: 700
-
+            
           .tag-comment
             display: none
             //display: flex
@@ -336,6 +336,8 @@ footer
                   height: 2rem
                   border-radius: 50%
                   border: var(--border-color-frame) solid 1px
+                .friend-info
+                  transform: translate(-105%, -65%)
 
                 #cmttext
                   background-color: var(--background-color-event)
@@ -404,6 +406,8 @@ footer
           cursor: pointer
         *:hover
           background-color: #FFDFDF
+        *:active
+          transform: scale(0.97)
           
 
 #relation-graph
@@ -510,6 +514,9 @@ footer
       
       a
         margin: 0 0.1rem 0.5rem 0.1rem
+        
+      img:active
+        transform: scale(0.97)
       img
         width: 3.1rem
         height: 3.1rem
@@ -518,51 +525,12 @@ footer
         border-radius: 50%
         border: var(--border-color-frame) solid 0.1rem
         //margin: 0 0.2rem 0.5rem 0.2rem
+        
+      .friend-info
+        transform: translate(0, 0)
       .virtualimg
         width: 3.7rem
         height: 0
-      .friend-info
-        display: none
-        flex-direction: column
-        align-items: stretch;
-        align-content: space-between;
-        position: absolute
-        trasnform: translate(-50%, -100%)
-        padding: 0.5rem
-        background-color: var(--background-color-freind)
-        border: solid var(--background-color-navbar) 0.1rem
-        border-radius: 0.8rem
-        min-width: 14rem;
-        box-shadow: 0.15rem 0.1rem 0.3rem 0.1rem var(--boxshadow-color)
-        .info-brief
-          display: flex
-          flex-direction: row;
-          flex-wrap: nowrap;
-          align-items: flex-start;
-          justify-content: flex-start;
-          img
-            width: 4rem
-            height: 4rem
-            margin-right: 1rem
-          p#friend-name
-            font-weight: 600
-            font-size: 1.2rem
-          .info-brief-right
-            display: flex
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: flex-start;
-            .info-brief-school
-              display: flex
-              flex-direction: column;
-              align-items: flex-start;
-              p
-                font-size: 0.8rem
-                color: var(--fontcolor-second)
-              p:nth-child(1)
-                font-weight: 500
-              p:nth-child(2)
-                font-weight: 500
         p
           font-size: 1rem
         
@@ -821,6 +789,47 @@ footer
       margin-bottom: 1rem
 
 
+.friend-info
+  display: none
+  flex-direction: column
+  align-items: stretch;
+  align-content: space-between;
+  position: absolute
+  padding: 0.5rem
+  background-color: var(--background-color-freind)
+  border: solid var(--background-color-navbar) 0.1rem
+  border-radius: 0.8rem
+  min-width: 14rem;
+  box-shadow: 0.15rem 0.1rem 0.3rem 0.1rem var(--boxshadow-color)
+  .info-brief
+    display: flex
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    justify-content: flex-start;
+    img
+      width: 4rem
+      height: 4rem
+      margin-right: 1rem
+    p#friend-name
+      font-weight: 600
+      font-size: 1.2rem
+    .info-brief-right
+      display: flex
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      .info-brief-school
+        display: flex
+        flex-direction: column;
+        align-items: flex-start;
+        p
+          font-size: 0.8rem
+          color: var(--fontcolor-second)
+        p:nth-child(1)
+          font-weight: 500
+        p:nth-child(2)
+          font-weight: 500
 
   
 @media only screen and (max-width: 1023px)
