--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -362,8 +362,9 @@ input[type='button']:active
         flex-wrap: nowrap
         justify-content: flex-start
         align-items: center
-        height: 16rem
-        //overflow: hidden
+        overflow-y: auto;
+        overflow-x: hidden;
+        max-height: 21.5rem;
         
         .member
           width: 3rem
@@ -518,7 +519,7 @@ input[type='button']:active
         width: 100%
         height: 6rem
 
-      .eventjoinbtn
+      .btn
         border-radius: 3rem
         background-color: var(--border-color-eventwindow)
         cursor: pointer
@@ -527,6 +528,8 @@ input[type='button']:active
         height: 2.5rem;
         outline: none
         border: none
+      .loadingbtn
+        z-index: -1
       
   #eventcontrol
     .eventcontainer
@@ -540,6 +543,10 @@ input[type='button']:active
       position: absolute
       left: 50%
       transform: translate(-50%, 0)
+      
+      p
+        font-size: 2rem
+        font-weight: 600
       
       #member-control-list
         display: flex
@@ -603,9 +610,6 @@ input[type='button']:active
               font-size: 0.8rem
               text-aligh: right
               width: 95%
-            #m-status
-              text-align: right
-              background-color: var(--blue)
             .member-btn
               margin: 0.3rem 0 0.3rem 0
               height: 1.5rem
