--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -148,12 +148,16 @@ a
       z-index: 2
       
     
-    #aboutus-hover
-      //transform: translate(-50%, 15%)
     #feedback-hover
-      //transform: translate(-50%, -35%)
+      transform: translate(-1.25rem, 0px)
+    #alert-hover
+      transform: translate(-0.5rem, 0px);
+    #message-hover
+      transform: translate(-2rem, 0)
+    #aboutus-hover
+      transform: translate(-1.5rem, 0)
     #profile-hover
-      //transform: translate(-50%, -15%)
+      transform: translate(-1.25rem, 0)
       
       
     #event
