change event background wrt different condition

--- a/static/sass/variable.sass
+++ b/static/sass/variable.sass
@@ -69,7 +69,7 @@
   //homepage
 
   --background-color-container: #FFFFFF
-  --background-color-card: #FFAD94
+  --background-color-card: #FFC5B2
   --background-color-input: #F2F2F2
   --background-color-input-hover: #EFFFFB
 
