change dirty code of event post background color conditioning

--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -81,8 +81,12 @@ html
           {% for event in event_obj %}
           a(id='{{ event.pk }}' margin='0')
             .eventpost
-              {% if event.is_closed %}
-              .posttop(style="background-color: #E0E0E0")
+              .posttop
+                {% if event.is_closed %}
+                .post-condition(style="display: none") 0
+                {% elif event.host == request.user.userextend %}
+                .post-condition(style="display: none") 1
+                {% endif %}
                 p#post_title.title {{ event.title }}
                 p#post_subtitle.subtitle {{ event.subtitle }}
                 {% if event.image %}
@@ -92,53 +96,13 @@ html
                 {% endif %}
                 #add_pic
                   #addpic_bg
-                    #addicon
+                    #addicon  
                 #posttag
                   #tags
                 #postcreatdate
-                  //- p {{ event.create_date }}   
+                  //- p {{ event.create_date }}
                 #postwanted
                   //- p {{ event.people_wanted }}
-              {% else %}
-              {% if event.host == request.user.userextend %}
-              .posttop(style="background-color: #9FE4D4")
-                p#post_title.title {{ event.title }}
-                p#post_subtitle.subtitle {{ event.subtitle }}
-                {% if event.image %}
-                img#postimgs(src="{{ event.image.url }}")
-                {% else %}
-                //- #postimgs
-                {% endif %}
-                #add_pic
-                  #addpic_bg
-                    #addicon
-                #posttag
-                  #tags   
-                #postcreatdate
-                  //- p {{ event.create_date }}  
-                #postwanted
-                  //- p {{ event.people_wanted }}
-              {% else %}
-              .posttop
-                p#post_title.title {{ event.title }}
-                p#post_subtitle.subtitle {{ event.subtitle }}
-                {% if event.image %}
-                img#postimgs(src="{{ event.image.url }}")
-                {% else %}
-                //- #postimgs
-                {% endif %}
-                #add_pic
-                  #addpic_bg
-                    #addicon
-                #posttag
-                  #tags   
-                #postcreatdate
-                  //- p {{ event.create_date }}  
-                #postwanted
-                  //- p {{ event.people_wanted }}
-              {% endif %}
-              {% endif %}
-                
                 
               .postbottom
                 img#commenticon(src="{% static 'file/participant.png' %}")
