--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -78,8 +78,33 @@ html
             })
               
         #eventboard
+          {% for user, common_friend in user_zip %}
+          a.user-a(id='profile_{{ user.id }}' href="/profile/{{ user.id }}" margin="0")
+            .user-info
+              .info-brief
+                img(src="{{ user.img.url }}")
+                .info-brief-right
+                  p#user-name {{ user.full_name }}
+                  .info-brief-school
+                    p {{ user.department }}
+                    p {{ user.grade }}
+                    {% if request.user.is_authenticated %}
+                    {% if common_friend == -1 %}
+                    p 這就是你！
+                    {% else %}
+                    p {{ common_friend }} 位共同連結
+                    {% endif %}
+                    {% endif %}
+              
+          {% endfor %}
+          #virtualdiv
+          #virtualdiv
+          #virtualdiv
+          #virtualdiv
+          .break
+          {% if event_obj %}
           {% for event in event_obj %}
-          a(id='{{ event.pk }}' margin='0')
+          a.event-a(id='{{ event.pk }}' margin='0')
             .eventpost
               .posttop
                 {% if event.is_closed %}
@@ -118,9 +143,9 @@ html
           .eventpost(style='width: 100%; margin-top: 3rem; padding: 2rem 0')
             p 目前沒有相關內容
           {% endfor %}
-          
+          {% endif %}
           script.
-            $('#eventboard a').on("click", function() {
+            $('#eventboard a.event-a').on("click", function() {
               $('#eventwindow').attr('class', this.id)
               event_handler(
                 "/event/" + this.id, 
